--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lisp/elfeed-dashboard"]
 	path = lisp/elfeed-dashboard
 	url = https://github.com/Manoj321/elfeed-dashboard
+[submodule "lisp/fennel-mode"]
+	path = lisp/fennel-mode
+	url = https://github.com/emacsmirror/fennel-mode
